<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.ainlolcat.nanny.SettingsFragment">

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nanny_s_preferences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/setting_bot_secret_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Secret of Telegram Bot:"
        app:layout_constraintTop_toBottomOf="@id/textview_second"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/setting_bot_secret"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/setting_bot_secret_label" />

    <TextView
        android:id="@+id/setting_allowed_users_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Allowed usernames (';' separated):"
        app:layout_constraintTop_toBottomOf="@id/setting_bot_secret"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/setting_allowed_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/setting_allowed_users_label" />

    <TextView
        android:id="@+id/setting_sound_level_threshold_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Sound level threshold:"
        app:layout_constraintTop_toBottomOf="@id/setting_allowed_users"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/setting_sound_level_threshold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/setting_sound_level_threshold_label" />

    <Button
        android:id="@+id/button_save_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_discard_settings"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_discard_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_save_settings" />

</androidx.constraintlayout.widget.ConstraintLayout>