<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.ainlolcat.nanny.InitialFragment">

    <TextView
        android:id="@+id/textview_initial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_initial_fragment"
        app:layout_constraintBottom_toTopOf="@id/button_start_initial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_max_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="Max lvl:"
        app:layout_constraintEnd_toStartOf="@+id/textview_max"
        app:layout_constraintTop_toBottomOf="@+id/button_start_initial" />

    <TextView
        android:id="@+id/textview_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="~~"
        app:layout_constraintEnd_toStartOf="@id/textview_avg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_start_initial" />

    <TextView
        android:id="@+id/textview_avg_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="Avg lvl:"
        app:layout_constraintEnd_toStartOf="@+id/textview_avg"
        app:layout_constraintTop_toBottomOf="@+id/button_start_initial" />

    <TextView
        android:id="@+id/textview_avg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="~~"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textview_max"
        app:layout_constraintTop_toBottomOf="@id/button_start_initial" />

    <Button
        android:id="@+id/button_start_initial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_initial" />

    <Button
        android:id="@+id/button_nav_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_start_initial" />

</androidx.constraintlayout.widget.ConstraintLayout>